Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,14 +31,53 @@
 <a id="who-i-am" class="anchor" href="#who-i-am" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who I am?</h1>
 
 <p>me<img src="http://postimg.org/image/llhbedegj/" alt="">
-I'm David, I really like games, especially boardgames and RPG.<br>
+I'm David, I live in Catania(IT) but I like to move for long periods and live in different cities.<br>
+Someone says I'm a designer but overall I'm a gamer.  </p>
+
+<p>In 2012 I was in Florence and with a lot of other people I contributed to foundation of Fablab Firenze.
+Than in Catania I've joined and ruled the Hackspace Catania that today I can call "Home".
+I started discovering this world in 2011 from 3D printing, a powerfull tool for every product designer, and so it has become my thesis.  </p>
+
+<p>For me the Fab Academy is an oportunity to extend my skills in digital fabrication and a way to find new reason to reach new cities.  </p>
+
+<p>I really like games, especially boardgames and RPG.<br>
 A game has usually a set of rules, some tool to play with and motivated people who decide to play the game.<br>
-That's a game for me, the most serious thing in the world.</p>
+That's a game for me.  </p>
+
+<h1>
+<a id="project-description" class="anchor" href="#project-description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Description</h1>
+
+<h3>
+<a id="subject" class="anchor" href="#subject" aria-hidden="true"><span class="octicon octicon-link"></span></a>Subject</h3>
+
+<p>An wargame set in outerspace with an interactive and modular scenario.<br>
+Every modules will be sensible to different kind of ships and will provide usefull informations for an enhanched gameplay.
+Tha game will allow to be played as a phisical game, being phisically immersed into the scenario to play the game and moving every piece by hand while the great part of the digital aspects will be "almost-unperceiveble".</p>
+
+<h3>
+<a id="goals" class="anchor" href="#goals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goals</h3>
+
+<p>*Build the planet modules in an easy, cheap and modular way.<br>
+*Build different kind of ships, buildings and defences.<br>
+*Allow the planet to recognize every different ship.<br>
+*Allow the planets to regognize them as members of the same party.<br>
+*Allow the planets to communicate their status easly and directly to the player trough lighi and sound.<br>
+*Allow the planets to measure the distance between them to enable/disable some actions.<br>
+*Manage some functions via web application.<br>
+*Build a large frame (named "known space") to set the game's space hanging up the planets.  </p>
+
+<h3>
+<a id="design-considerations" class="anchor" href="#design-considerations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Design considerations</h3>
+
+<p>*A game is essentially a set of rules that define one or more purposes, some ways to reach it and forbidden behaviours. All that is not inherent with the Fab Academy's purposes and will not be developed. Th project will be about a framework of devices to use to write a set of rules.<br>
+*That kind of game need a great amount of time to set up a match. That imply a great motivation and a long duration of the match to justify the setting time so virtually this game could be infinite adding new space game, new planets, new fleet and new parties.<br>
+*The planets will not be spherical but polihedrical to define a number of slot that can host pieces (like ships and buildings). The join between planet and pieces will be made by magnets, so it provides both an easy snap of the pieces and elettrical contact at the same time.<br>
+*The frame of the known space will be modular too to expand the space of the game.  </p>
 
 <h1>
 <a id="assignments" class="anchor" href="#assignments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assignments</h1>
 
-<p>Here you'll find the documentation of my weekly improvement</p>
+<p>Here you'll find the documentation of my weekly improvements</p>
 
 <p><strong>principles and practices, project management (Jan 28)</strong>  </p>
 
