Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="FAB ACADEMY 2015 : ruled by David Montenegro">
+    <title>FAB ACADEMY 2015 by davidmonten</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>FAB ACADEMY 2015</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>FAB ACADEMY 2015</h1>
+        <p>ruled by David Montenegro</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/davidmonten">View on GitHub</a>
 
-          <h1 id="project_title">FAB ACADEMY 2015</h1>
-          <h2 id="project_tagline">ruled by David Montenegro</h2>
+        <p class="view"><a href="https://github.com/davidmonten">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h1>
 <a id="who-i-am" class="anchor" href="#who-i-am" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who I am?</h1>
 
@@ -57,22 +53,38 @@ Tha game will allow to be played as a phisical game, being phisically immersed i
 <h3>
 <a id="goals" class="anchor" href="#goals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goals</h3>
 
-<p>*Build the planet modules in an easy, cheap and modular way.<br>
-*Build different kind of ships, buildings and defences.<br>
-*Allow the planet to recognize every different ship.<br>
-*Allow the planets to regognize them as members of the same party.<br>
-*Allow the planets to communicate their status easly and directly to the player trough lighi and sound.<br>
-*Allow the planets to measure the distance between them to enable/disable some actions.<br>
-*Manage some functions via web application.<br>
-*Build a large frame (named "known space") to set the game's space hanging up the planets.  </p>
+<ul>
+<li>Build the planet modules in an easy, cheap and modular way.<br>
+</li>
+<li>Build different kind of ships, buildings and defences.<br>
+</li>
+<li>Allow the planet to recognize every different ship.<br>
+</li>
+<li>Allow the planets to regognize them as members of the same party.<br>
+</li>
+<li>Allow the planets to communicate their status easly and directly to the player trough lighi and sound.<br>
+</li>
+<li>Allow the planets to measure the distance between them to enable/disable some actions.<br>
+</li>
+<li>Manage some functions via web application.<br>
+</li>
+<li>Build a large frame (named "known space") to set the game's space hanging up the planets.<br>
+</li>
+</ul>
 
 <h3>
 <a id="design-considerations" class="anchor" href="#design-considerations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Design considerations</h3>
 
-<p>*A game is essentially a set of rules that define one or more purposes, some ways to reach it and forbidden behaviours. All that is not inherent with the Fab Academy's purposes and will not be developed. Th project will be about a framework of devices to use to write a set of rules.<br>
-*That kind of game need a great amount of time to set up a match. That imply a great motivation and a long duration of the match to justify the setting time so virtually this game could be infinite adding new space game, new planets, new fleet and new parties.<br>
-*The planets will not be spherical but polihedrical to define a number of slot that can host pieces (like ships and buildings). The join between planet and pieces will be made by magnets, so it provides both an easy snap of the pieces and elettrical contact at the same time.<br>
-*The frame of the known space will be modular too to expand the space of the game.  </p>
+<ul>
+<li>A game is essentially a set of rules that define one or more purposes, some ways to reach it and forbidden behaviours. All that is not inherent with the Fab Academy's purposes and will not be developed. Th project will be about a framework of devices to use to write a set of rules.<br>
+</li>
+<li>That kind of game need a great amount of time to set up a match. That imply a great motivation and a long duration of the match to justify the setting time so virtually this game could be infinite adding new space game, new planets, new fleet and new parties.<br>
+</li>
+<li>The planets will not be spherical but polihedrical to define a number of slot that can host pieces (like ships and buildings). The join between planet and pieces will be made by magnets, so it provides both an easy snap of the pieces and elettrical contact at the same time.<br>
+</li>
+<li>The frame of the known space will be modular too to expand the space of the game.<br>
+</li>
+</ul>
 
 <h1>
 <a id="assignments" class="anchor" href="#assignments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assignments</h1>
@@ -119,16 +131,11 @@ Tha game will allow to be played as a phisical game, being phisically immersed i
 
 <p><strong>project presentation (Jun 10)</strong>  </p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
