Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>FAB ACADEMY 2015 by davidmonten</title>
+    <meta name="description" content="FAB ACADEMY 2015 : ruled by David Montenegro">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>FAB ACADEMY 2015</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>FAB ACADEMY 2015</h1>
-        <p>ruled by David Montenegro</p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/davidmonten">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/davidmonten">View My GitHub Profile</a></p>
+          <h1 id="project_title">FAB ACADEMY 2015</h1>
+          <h2 id="project_tagline">ruled by David Montenegro</h2>
 
-      </header>
-      <section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
-<a id="who-i-am" class="anchor" href="#who-i-am" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who I am?</h1>
+<a id="who-i-am" class="anchor" href="#who-i-am" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who I am</h1>
 
 <p>me<img src="http://postimg.org/image/llhbedegj/" alt="">
 I'm David, I live in Catania(IT) but I like to move for long periods and live in different cities.<br>
@@ -91,51 +95,39 @@ Tha game will allow to be played as a phisical game, being phisically immersed i
 
 <p>Here you'll find the documentation of my weekly improvements</p>
 
-<p><strong>principles and practices, project management (Jan 28)</strong>  </p>
-
-<p><strong>computer-aided design (Feb 4)</strong>  </p>
-
-<p><strong>computer-controlled cutting (Feb 11)</strong>  </p>
-
-<p><strong>electronics production (Feb 18)</strong>  </p>
-
-<p><strong>3D scanning and printing (Feb 25)</strong>   </p>
-
-<p><strong>electronics design (Mar 4)</strong>  </p>
-
-<p><strong>embedded programming (Mar 11)</strong>  </p>
-
-<p><strong>computer-controlled machining (Mar 18)</strong>  </p>
-
-<p><strong>molding and casting (Mar 25)</strong>  </p>
-
-<p><strong>break (Apr 1)</strong>  </p>
-
-<p><strong>input devices (Apr 8)</strong>  </p>
-
-<p><strong>output devices (Apr 15)</strong>  </p>
-
-<p><strong>composites (Apr 22)</strong>  </p>
-
-<p><strong>networking and communications (Apr 29)</strong>  </p>
-
-<p><strong>mechanical design, machine design (May 6)</strong>  </p>
-
-<p><strong>interface and application programming (May 13)</strong>  </p>
-
-<p><strong>applications and implications (May 20)</strong>  </p>
-
-<p><strong>invention, intellectual property, and income (May 27)</strong>  </p>
-
-<p><strong>project development (Jun 3)</strong>  </p>
-
-<p><strong>project presentation (Jun 10)</strong>  </p>
+<ol>
+<li><p><strong>principles and practices, project management (Jan 28)</strong>  </p></li>
+<li><p><strong>computer-aided design (Feb 4)</strong>  </p></li>
+<li><p><strong>computer-controlled cutting (Feb 11)</strong>  </p></li>
+<li><p><strong>electronics production (Feb 18)</strong>  </p></li>
+<li><p><strong>3D scanning and printing (Feb 25)</strong>   </p></li>
+<li><p><strong>electronics design (Mar 4)</strong>  </p></li>
+<li><p><strong>embedded programming (Mar 11)</strong>  </p></li>
+<li><p><strong>computer-controlled machining (Mar 18)</strong>  </p></li>
+<li><p><strong>molding and casting (Mar 25)</strong>  </p></li>
+<li><p><strong>break (Apr 1)</strong>  </p></li>
+<li><p><strong>input devices (Apr 8)</strong>  </p></li>
+<li><p><strong>output devices (Apr 15)</strong>  </p></li>
+<li><p><strong>composites (Apr 22)</strong>  </p></li>
+<li><p><strong>networking and communications (Apr 29)</strong>  </p></li>
+<li><p><strong>mechanical design, machine design (May 6)</strong>  </p></li>
+<li><p><strong>interface and application programming (May 13)</strong>  </p></li>
+<li><p><strong>applications and implications (May 20)</strong>  </p></li>
+<li><p><strong>invention, intellectual property, and income (May 27)</strong>  </p></li>
+<li><p><strong>project development (Jun 3)</strong>  </p></li>
+<li><p><strong>project presentation (Jun 10)</strong>  </p></li>
+</ol>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
