--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="FAB ACADEMY 2015 : ruled by David Montenegro">
+    <title>FAB ACADEMY 2015 by davidmonten</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>FAB ACADEMY 2015</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>FAB ACADEMY 2015</h1>
+        <p>ruled by David Montenegro</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/davidmonten">View on GitHub</a>
 
-          <h1 id="project_title">FAB ACADEMY 2015</h1>
-          <h2 id="project_tagline">ruled by David Montenegro</h2>
+        <p class="view"><a href="https://github.com/davidmonten">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h1>
 <a id="who-i-am" class="anchor" href="#who-i-am" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who I am</h1>
 
@@ -118,16 +114,11 @@ Tha game will allow to be played as a phisical game, being phisically immersed i
 <li><p><strong>project presentation (Jun 10)</strong>  </p></li>
 </ol>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
