--- a/01_28_princ_n_prac.html
+++ b/01_28_princ_n_prac.html
@@ -17,12 +17,12 @@
     <h2>David Montenegro</h2>
     <h1><a href="./">FAB ACADEMY 2015</a></h1>
     <div>
-      <p><a href="./assignment.html"><b>Assignments<b/></a> | <a href="./final_project.html"><b>Final Project<b/></a> | <a href="./about.html"><b>About<b/></a> | <a href="./contact.html"><b>Contact<b/></a></p>
+      <p><a href="./assignment.html"><b>Assignments<b/></a> | <a href="./final_project.html"><b>Final Project<b/></a> | <a href="./about.html"><b>About<b/></a> | <a href="./contacts.html"><b>Contact<b/></a></p>
      </div>
      <h2 id="principles-and-practices">01_28 Principles and Practices</h2>
 
-<p>On wensday 28.01.2015 we’ve got the first online lesson with Neil Gershenfeld, divided in <a href="http://vimeo.com/118241438">Principles and Practices</a> and <a href="http://vimeo.com/118241439">Project Management</a>.<br />
-The next lessons can be found on th <a href="http://vimeo.com/fabacademy">Fab Academy account on Vimeo</a>.</p>
+<p>On wednesday 28.01.2015 we’ve got the first online lesson with Neil Gershenfeld, divided in <a href="http://vimeo.com/118241438">Principles and Practices</a> and <a href="http://vimeo.com/118241439">Project Management</a>.<br />
+The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab Academy account on Vimeo</a>.</p>
 
 <p>For this week the assignment was  </p>
 
