--- a/assignment.html
+++ b/assignment.html
@@ -17,7 +17,7 @@
     <h2>David Montenegro</h2>
     <h1><a href="./">FAB ACADEMY 2015</a></h1>
     <div>
-      <p><a href="./assignment.html"><b>Assignments<b/></a> | <a href="./final_project.html"><b>Final Project<b/></a> | <a href="./about.html"><b>About<b/></a> | <a href="./contact.html"><b>Contact<b/></a></p>
+      <p><a href="./assignment.html"><b>Assignments<b/></a> | <a href="./final_project.html"><b>Final Project<b/></a> | <a href="./about.html"><b>About<b/></a> | <a href="./contacts.html"><b>Contact<b/></a></p>
      </div>
      <h2 id="assignments">Assignments</h2>
 <p>Here you’ll find the documentation of my weekly improvements</p>
