--- a/02_11_computer_assisted_cutting.html
+++ b/02_11_computer_assisted_cutting.html
@@ -29,7 +29,7 @@ The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab A
 <p>For this week the assignment was  </p>
 
 <blockquote>
-  <p>**  design, make, and document a press-fit construction kit **  </p>
+  <p>** design, make, and document a press-fit construction kit **  </p>
 </blockquote>
 
 <h2 id="set-up">Set up</h2>
@@ -151,8 +151,7 @@ These are useful informations for (all) the next step to produce a “strange sp
 </ul>
 
 <p><em>DOWNLOAD</em><br />
-<a href="./img/02_11_cutting/screen/gh_def_HR.png">gh_def_HR</a>  <br />
-<a href="./files/02_04_2D3D_CAD/spaceships_parametric_pressfit.png">spaceships_parametric_pressfit</a>  </p>
+<a href="https://drive.google.com/?utm_source=it&amp;utm_medium=button&amp;utm_campaign=web&amp;utm_content=gotodrive&amp;usp=gtd&amp;ltmpl=drive&amp;pli=1#folders/0B0rUICZu8UH-UGEwTG9QTkJGVjQ">gh_def_HR</a>  </p>
 
 <h4 id="cutting">Cutting</h4>
 
@@ -174,7 +173,7 @@ It will be made also in plexiglass and plywood, testing some pattern engrave.</p
 <p><img src="./img/02_11_cutting/laser/pressfit/pf_4.jpg" alt="pf_4" />  </p>
 
 <h2 id="extra">Extra</h2>
-<p>In this week I made this other “thing”  using the modules made by Francesca mereu for her press-kit.</p>
+<p>In this week I made this other “thing”  using the modules made by Francesca Mereu for her press-kit.</p>
 
 <p><img src="./img/02_11_cutting/laser/pressfit/modular_structure.jpg" alt="modular_structure" /></p>
 
