--- a/assignment.html
+++ b/assignment.html
@@ -33,7 +33,7 @@
     <p><a href="./02_11_computer_assisted_cutting.html"><strong>computer-controlled cutting (Feb 11)</strong></a>  </p>
   </li>
   <li>
-    <p><strong>electronics production (Feb 18)</strong>  </p>
+    <p><a href="./02_18_electr_prod.html"><strong>electronics production (Feb 18)</strong></a>  </p>
   </li>
   <li>
     <p><strong>3D scanning and printing (Feb 25)</strong>   </p>
