--- a/final_project.html
+++ b/final_project.html
@@ -114,6 +114,15 @@ The game will allow to be played as a phisical game, being phisically immersed i
   </li>
 </ul>
 
+<h3 id="updates">Updates</h3>
+
+<p>02.19.2015 - Yesterday during the review of Haldin Andres I’ve seen an interesting image about some pattern that I’d use over modules and pattern to customize a set of pieces.
+<img src="http://fabacademy.org/archives/2015/eu/students/haldin.anders/img/week3/living_hinge.jpg" alt="obrary" />
+You can find dxf and pdf on a <a href="https://github.com/Obrary/Living-Hinge-Swatches">github repository</a>.  </p>
+
+<p>I’ll use also another pattern made by me to customize some piece.
+I’m still working on it.</p>
+
 <p>continue to read the <a href="01_28_princ_n_prac.html">first assignment</a></p>
 
      
